--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -49,7 +49,7 @@
   padding: 30px 0px;
 }
 .header__inner {
-  max-width: 871px;
+  max-width: 1113px;
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -61,11 +61,15 @@
 }
 .header__nav-item-link {
   position: relative;
-}
-.header__menu-item {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4a4a4a;
+  text-decoration: none;
   position: relative;
 }
-.header__menu-item--active::before {
+.header__nav-item-link--active::before {
   content: "";
   position: absolute;
   min-width: 21px;
@@ -80,13 +84,15 @@
   display: flex;
   list-style: none;
 }
-.nav__item-link {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: #4a4a4a;
-  text-decoration: none;
+.nav__item-link--active::before {
+  content: "";
+  position: absolute;
+  min-width: 21px;
+  height: 1px;
+  background-color: #fb9b69;
+  bottom: -3px;
+  right: 50%;
+  transform: translateX(50%);
 }
 
 .button {
