--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,7 +7,7 @@
   width: 100%;
   padding: 30px 0px;
   &__inner {
-    max-width: 871px;
+    max-width: 1113px;
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -27,8 +27,12 @@
   }
   &__nav-item-link {
     position: relative;
-  }
-  &__menu-item {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #4a4a4a;
+    text-decoration: none;
     position: relative;
     &--active::before {
       content: "";
@@ -52,14 +56,20 @@
 
   &__list-item {
   }
+  &__item-link {
+  }
 
   &__item-link {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #4a4a4a;
-    text-decoration: none;
+    &--active::before {
+      content: "";
+      position: absolute;
+      min-width: 21px;
+      height: 1px;
+      background-color: #fb9b69;
+      bottom: -3px;
+      right: 50%;
+      transform: translateX(50%);
+    }
   }
 }
 .button {
