--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -47,11 +47,13 @@
 .header {
   width: 100%;
   padding: 30px 0px;
+  background: #ecf7f3;
 }
 .header__inner {
-  max-width: 1113px;
+  max-width: 1143px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -97,8 +99,6 @@
 
 .button {
   display: inline-block;
-  width: 108px;
-  height: 42px;
   background: #48b774;
   border-radius: 20px;
   padding: 9px 23px;
@@ -116,4 +116,77 @@
 }
 .button--active {
   background-color: red;
+}
+
+.hero {
+  width: 100%;
+  background: #ecf7f3;
+}
+.hero__inner {
+  max-width: 1143px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+  display: flex;
+}
+.hero__items-column {
+  max-width: 597px;
+  width: 100%;
+}
+.hero__title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 65px;
+  color: #2d2d2d;
+}
+.hero__text {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 26px;
+  color: #7c7c7c;
+}
+.hero__search-w {
+  width: 100%;
+  position: relative;
+}
+.hero__search {
+  width: 100%;
+  height: 62px;
+  padding: 0px 3px 0px 40px;
+  background: #ffffff;
+  box-shadow: 0px 20px 30px rgba(222, 222, 222, 0.25);
+  border-radius: 100px;
+  outline: none;
+  border: none;
+}
+.hero__search::-moz-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.01em;
+  color: #a2a2a2;
+}
+.hero__search:-ms-input-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.01em;
+  color: #a2a2a2;
+}
+.hero__search::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.01em;
+  color: #a2a2a2;
+}
+.hero__search-icon {
+  position: absolute;
+  right: 3px;
+  transform: translateY(6%);
 }/*# sourceMappingURL=styles.css.map */
