--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,10 +6,12 @@
 .header {
   width: 100%;
   padding: 30px 0px;
+  background: #ecf7f3;
   &__inner {
-    max-width: 1113px;
+    max-width: 1143px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -74,8 +76,6 @@
 }
 .button {
   display: inline-block;
-  width: 108px;
-  height: 42px;
   background: #48b774;
   border-radius: 20px;
   padding: 9px 23px;
@@ -93,5 +93,66 @@
 
   &--active {
     background-color: red;
+  }
+}
+.hero {
+  width: 100%;
+  background: #ecf7f3;
+  &__inner {
+    max-width: 1143px;
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
+    display: flex;
+  }
+
+  &__items-column {
+    max-width: 597px;
+    width: 100%;
+  }
+
+  &__title {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 65px;
+    color: #2d2d2d;
+  }
+
+  &__text {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 26px;
+    color: #7c7c7c;
+  }
+
+  &__search-w {
+    width: 100%;
+    position: relative;
+  }
+
+  &__search {
+    width: 100%;
+    height: 62px;
+    padding: 0px 3px 0px 40px;
+    background: #ffffff;
+    box-shadow: 0px 20px 30px rgba(222, 222, 222, 0.25);
+    border-radius: 100px;
+    outline: none;
+    border: none;
+    &::placeholder {
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      letter-spacing: 0.01em;
+      color: #a2a2a2;
+    }
+  }
+  &__search-icon {
+    position: absolute;
+    right: 3px;
+    transform: translateY(6%);
   }
 }
