--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -191,13 +191,17 @@
   transform: translateY(6%);
 }
 .hero__users {
-  display: block;
+  display: flex;
+  align-items: center;
 }
 .hero__users-icons {
   position: relative;
+  display: flex;
+  width: 93px;
 }
 .hero__user-icon {
-  position: absolute;
+  position: relative;
+  display: inline-block;
   top: 0;
 }
 .hero__user-icon:first-child {
@@ -205,10 +209,25 @@
   z-index: 4;
 }
 .hero__user-icon:nth-child(2) {
-  left: 20px;
+  left: -23px;
   z-index: 3;
 }
-.hero__user-icon:last-child {
-  left: 42px;
+.hero__user-icon:nth-child(3) {
+  left: -43px;
   z-index: 2;
+}
+.hero__plus-w {
+  position: relative;
+  width: 38px;
+  height: 38px;
+  background: #FF8345;
+  border: 3px solid #FFFFFF;
+  border-radius: 50%;
+  display: flex;
+  padding: 6px;
+  left: -58px;
+  z-index: 1;
+}
+.hero__users-statistics {
+  margin-left: 12px;
 }/*# sourceMappingURL=styles.css.map */
