--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -168,15 +168,19 @@
 
 
    &__users {
-      display: block;
+      display: flex;
+      align-items: center;
    }
 
    &__users-icons {
       position: relative;
+      display: flex;
+      width: 93px;
    }
 
    &__user-icon {
-      position: absolute;
+      position: relative;
+      display: inline-block;
       top: 0;
 
       &:first-child {
@@ -185,16 +189,32 @@
       }
 
       &:nth-child(2) {
-         left: 20px;
+         left: -23px;
          z-index: 3;
       }
 
-      &:last-child {
-         left: 42px;
+      &:nth-child(3) {
+         left: -43px;
          z-index: 2;
       }
 
    }
 
-   &__users-statistics {}
+   &__plus-w {
+      position: relative;
+      width: 38px;
+      height: 38px;
+      background: #FF8345;
+      border: 3px solid #FFFFFF;
+      border-radius: 50%;
+      display: flex;
+      padding: 6px;
+      left: -58px;
+      z-index: 1;
+   }
+
+   &__users-statistics {
+      margin-left: 12px;
+
+   }
 }
