in the process;)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -160,6 +160,10 @@
       }
    }
 
+   &__search-prompt {
+      color: red;
+   }
+
    &__search-icon {
       position: absolute;
       right: 3px;
