--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -185,6 +185,9 @@
   letter-spacing: 0.01em;
   color: #a2a2a2;
 }
+.hero__search-prompt {
+  color: red;
+}
 .hero__search-icon {
   position: absolute;
   right: 3px;
