in the process;)

--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -121,6 +121,7 @@
 .hero {
   width: 100%;
   background: #ecf7f3;
+  padding-bottom: 44px;
 }
 .hero__inner {
   max-width: 1143px;
@@ -128,8 +129,9 @@
   padding: 0 15px;
   margin: 0 auto;
   display: flex;
+  justify-content: space-between;
 }
-.hero__items-column {
+.hero__items-left {
   max-width: 597px;
   width: 100%;
 }
@@ -139,6 +141,7 @@
   font-size: 48px;
   line-height: 65px;
   color: #2d2d2d;
+  margin-bottom: 22px;
 }
 .hero__text {
   font-family: "Poppins", sans-serif;
@@ -146,10 +149,15 @@
   font-size: 15px;
   line-height: 26px;
   color: #7c7c7c;
+  margin-bottom: 30px;
+}
+.hero__button {
+  margin-bottom: 50px;
 }
 .hero__search-w {
   width: 100%;
   position: relative;
+  margin-bottom: 40px;
 }
 .hero__search {
   width: 100%;
@@ -200,11 +208,10 @@
 .hero__users-icons {
   position: relative;
   display: flex;
-  width: 93px;
+  width: 100px;
 }
 .hero__user-icon {
   position: relative;
-  display: inline-block;
   top: 0;
 }
 .hero__user-icon:first-child {
@@ -212,11 +219,11 @@
   z-index: 4;
 }
 .hero__user-icon:nth-child(2) {
-  left: -23px;
+  left: -19px;
   z-index: 3;
 }
 .hero__user-icon:nth-child(3) {
-  left: -43px;
+  left: -35px;
   z-index: 2;
 }
 .hero__plus-w {
@@ -228,9 +235,27 @@
   border-radius: 50%;
   display: flex;
   padding: 6px;
-  left: -58px;
+  left: -50px;
   z-index: 1;
 }
 .hero__users-statistics {
   margin-left: 12px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #707070;
+}
+.hero__users-statistics-color-orange {
+  color: #FF8345;
+}
+.hero__items-right {
+  position: relative;
+  max-width: 450px;
+  width: 1005px;
+}
+.hero__img {
+  position: relative;
+  top: 20px;
+  left: -170px;
 }/*# sourceMappingURL=styles.css.map */
