in the process;)

--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -44,9 +44,15 @@
   box-sizing: border-box;
 }
 
+.wrapper {
+  width: 100%;
+  min-height: 757px;
+  background-color: #ECF7F3;
+}
+
 .header {
   width: 100%;
-  padding: 30px 0px;
+  padding: 30px 0px 42px 0px;
   background: #ecf7f3;
 }
 .header__inner {
@@ -122,6 +128,7 @@
   width: 100%;
   background: #ecf7f3;
   padding-bottom: 44px;
+  padding: 42px 0px 44px 0px;
 }
 .hero__inner {
   max-width: 1143px;
@@ -252,10 +259,30 @@
 .hero__items-right {
   position: relative;
   max-width: 450px;
-  width: 1005px;
+  width: 100%;
 }
 .hero__img {
+  position: absolute;
+  top: 43px;
+  left: -190px;
+  z-index: 1;
+}
+.hero__carousel {
   position: relative;
-  top: 20px;
-  left: -170px;
+  max-width: 450px;
+  height: 450px;
+  width: 100%;
+  border: 2px solid #E8E8E8;
+  border-radius: 50%;
+  bottom: 0px;
+  left: 0;
+}
+.hero__green-circle {
+  position: absolute;
+  width: 280px;
+  height: 280px;
+  background: #48B774;
+  border-radius: 50%;
+  top: 117px;
+  left: 90px;
 }/*# sourceMappingURL=styles.css.map */
