--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -163,6 +163,7 @@
       border-radius: 100px;
       outline: none;
       border: none;
+      cursor: pointer;
 
       &::placeholder {
          font-family: "Roboto", sans-serif;
@@ -251,9 +252,9 @@
 
    &__img {
       position: absolute;
-      top: 43px;
+      top: 42px;
       left: -190px;
-      z-index: 1;
+      z-index: 2;
    }
 
    &__carousel {
@@ -276,6 +277,52 @@
       border-radius: 50%;
       top: 117px;
       left: 90px;
+      z-index: 1;
    }
 
+   &__flag {
+      // position: absolute;
+      // top: 30%;
+      // left: 30%;
+      z-index: 5;
+   }
+
+}
+
+.flag-britain {
+   position: absolute;
+   left: 30%;
+   top: 30%;
+   animation-name: britain;
+   animation-delay: 0.4s;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-fill-mode: forwards;
+
+}
+
+.flag-italy {}
+
+.flag-india {}
+
+@keyframes india__small {
+   0% {
+      left: 30%;
+   }
+
+   100% {
+      left: -40px;
+      top: 40px;
+   }
+}
+
+@keyframes britain {
+   0% {
+      left: 30%;
+   }
+
+   100% {
+      left: -40px;
+      top: 40px;
+   }
 }
