--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,10 +2,40 @@
 @import "mixin.scss";
 @import "reset.scss";
 
+// "sm": 368px,
+// "md": 576px,
+// "lg": 768px,
+// "xl": 992px,
+// "xxl": 1280px,
+.m-menu {
+   width: 100%;
+
+   &__inner {
+      max-width: 500px;
+      width: 100%;
+      margin: 0 auto;
+   }
+
+   &__nav-list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+
+   &__list-item {
+      margin-top: 20px;
+   }
+
+   &__list-item-link {}
+
+
+}
+
 .wrapper {
    width: 100%;
    min-height: 757px;
    background-color: #ECF7F3;
+   overflow: hidden;
 }
 
 .header {
@@ -27,6 +57,12 @@
 
    &__menu {}
 
+   &__menu-items {
+      @include mq(lg) {
+         display: none;
+      }
+   }
+
    &__nav-list {}
 
    &__nav-item {
@@ -41,7 +77,10 @@
       line-height: 24px;
       color: #4a4a4a;
       text-decoration: none;
-      position: relative;
+
+      @include mq(lg) {
+         font-size: 14px;
+      }
 
       &--active::before {
          content: "";
@@ -66,19 +105,67 @@
 
    &__list-item {}
 
-   &__item-link {}
-
    &__item-link {
-      &--active::before {
-         content: "";
-         position: absolute;
-         min-width: 21px;
-         height: 1px;
-         background-color: #fb9b69;
-         bottom: -3px;
-         right: 50%;
-         transform: translateX(50%);
-      }
+      text-decoration: none;
+   }
+
+   &__item-link {}
+}
+
+.burger {
+   display: none;
+
+   @include mq(lg) {
+      display: block;
+   }
+
+   position: relative;
+   width: 40px;
+   height: 30px;
+   cursor: pointer;
+
+   &::before,
+   &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #48b774
+   }
+
+   &::before {
+      top: 0;
+      left: 0;
+   }
+
+   &::after {
+      bottom: 0;
+      left: 0;
+   }
+
+   &__line-center {
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #48b774;
+      top: 50%;
+      left: 0;
+   }
+
+   &--js-active::before {
+      transform: rotate(-315deg);
+      top: 48%;
+      transition: all 0.2s linear;
+   }
+
+   &--js-active::after {
+      transform: rotate(315deg);
+      bottom: 45%;
+      transition: all 0.2s linear;
+   }
+
+   &--js-active &__line-center {
+      transform: scale(0);
    }
 }
 
@@ -104,6 +191,8 @@
    &--active {
       background-color: red;
    }
+
+
 }
 
 .hero {
@@ -111,19 +200,31 @@
    background: #ecf7f3;
    padding-bottom: 44px;
    padding: 42px 0px 44px 0px;
+   min-height: 557px;
 
    &__inner {
       max-width: 1143px;
       width: 100%;
+      min-height: 557px;
       padding: 0 15px;
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
+
+      @include mq(xl) {
+         flex-direction: column;
+         align-items: center;
+
+      }
    }
 
    &__items-left {
       max-width: 597px;
       width: 100%;
+
+      @include mq(xl) {
+         margin-bottom: 50px;
+      }
    }
 
    &__title {
@@ -133,6 +234,10 @@
       line-height: 65px;
       color: #2d2d2d;
       margin-bottom: 22px;
+
+      @include mq(xl) {
+         text-align: center;
+      }
    }
 
    &__text {
@@ -142,10 +247,25 @@
       line-height: 26px;
       color: #7c7c7c;
       margin-bottom: 30px;
+
+      @include mq(xl) {
+         text-align: center;
+      }
+   }
+
+   &__button-w {
+      @include mq(xl) {
+         display: flex;
+         justify-content: center;
+      }
    }
 
    &__button {
       margin-bottom: 50px;
+
+      @include mq(xl) {
+         text-align: center;
+      }
    }
 
    &__search-w {
@@ -163,7 +283,6 @@
       border-radius: 100px;
       outline: none;
       border: none;
-      cursor: pointer;
 
       &::placeholder {
          font-family: "Roboto", sans-serif;
@@ -248,24 +367,41 @@
       position: relative;
       max-width: 450px;
       width: 100%;
+      display: flex;
+      justify-content: center;
    }
 
    &__img {
       position: absolute;
       top: 42px;
-      left: -190px;
       z-index: 2;
+
+      @include mq(md) {
+         max-width: 600px;
+      }
    }
 
    &__carousel {
       position: relative;
-      max-width: 450px;
+      width: 450px;
       height: 450px;
-      width: 100%;
       border: 2px solid #E8E8E8;
       border-radius: 50%;
       bottom: 0px;
       left: 0;
+      display: flex;
+      justify-content: center;
+      animation-name: carousel;
+      animation-delay: 2.5s;
+      animation-iteration-count: infinite;
+      animation-duration: 10s;
+      animation-timing-function: linear;
+
+      @include mq(md) {
+         max-width: 380px;
+         width: 100%;
+         height: 400px;
+      }
 
    }
 
@@ -276,17 +412,45 @@
       background: #48B774;
       border-radius: 50%;
       top: 117px;
-      left: 90px;
       z-index: 1;
+
+      @include mq(md) {
+         width: 200px;
+         height: 200px;
+      }
    }
 
    &__flag {
       // position: absolute;
       // top: 30%;
       // left: 30%;
-      z-index: 5;
+      // z-index: 5;
    }
 
+}
+
+.flag-india-small-left {
+   position: absolute;
+   left: 30%;
+   top: 40%;
+   animation-name: india-small-left;
+   animation-delay: 0.4s;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-fill-mode: forwards;
+
+
+}
+
+.flag-india-small-right {
+   position: absolute;
+   right: 30%;
+   top: 40%;
+   animation-name: india-small-right;
+   animation-delay: 2s;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-fill-mode: forwards;
 }
 
 .flag-britain {
@@ -294,25 +458,54 @@
    left: 30%;
    top: 30%;
    animation-name: britain;
-   animation-delay: 0.4s;
+   animation-delay: 0.8s;
    animation-duration: 1s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
 
 }
 
-.flag-italy {}
+.flag-italy-top {
+   position: absolute;
+   left: 40%;
+   top: 30%;
+   animation-name: italy-top;
+   animation-delay: 1.2s;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-fill-mode: forwards;
+}
 
-.flag-india {}
+.flag-italy-bottom {
+   position: absolute;
+   left: 40%;
+   bottom: 30%;
+   animation-name: italy-bottom;
+   animation-delay: 2.4s;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-fill-mode: forwards;
+}
 
-@keyframes india__small {
+.flag-india-big {
+   position: absolute;
+   right: 20%;
+   top: 30%;
+   animation-name: india-big;
+   animation-delay: 1.6s;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-fill-mode: forwards;
+}
+
+@keyframes india-small-left {
    0% {
       left: 30%;
    }
 
    100% {
-      left: -40px;
-      top: 40px;
+      left: -45px;
+      top: 50%;
    }
 }
 
@@ -322,7 +515,61 @@
    }
 
    100% {
-      left: -40px;
-      top: 40px;
+      left: -28px;
+      top: 5%;
+   }
+}
+
+@keyframes italy-top {
+   0% {
+      right: 28%;
+   }
+
+   100% {
+      right: 35%;
+      top: -50px;
+   }
+}
+
+@keyframes india-big {
+   0% {
+      right: 30%;
+   }
+
+   100% {
+      right: -28px;
+      top: 8%;
+   }
+}
+
+@keyframes india-small-right {
+   0% {
+      right: 30%;
+   }
+
+   100% {
+      right: -50px;
+      top: 50%;
+   }
+}
+
+@keyframes italy-bottom {
+   0% {
+      right: 28%;
+   }
+
+   100% {
+      right: 35%;
+      bottom: -55px;
+   }
+}
+
+@keyframes carousel {
+   0% {
+      transform: rotate(0deg);
+   }
+
+   100% {
+      transform: rotate(360deg);
    }
 }
