--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -203,10 +203,10 @@
    min-height: 557px;
 
    &__inner {
-      max-width: 1143px;
+      max-width: 1173px;
       width: 100%;
       min-height: 557px;
-      padding: 0 15px;
+      padding: 0 30px;
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
@@ -377,7 +377,8 @@
       z-index: 2;
 
       @include mq(md) {
-         max-width: 600px;
+         width: 600px;
+         top: 70px;
       }
    }
 
@@ -512,10 +513,12 @@
 @keyframes britain {
    0% {
       left: 30%;
+      transform: rotate(0deg);
    }
 
    100% {
       left: -28px;
+      animation-delay: 3s;
       top: 5%;
    }
 }
