--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,6 +7,8 @@
 // "lg": 768px,
 // "xl": 992px,
 // "xxl": 1280px,
+
+
 .m-menu {
    width: 100%;
 
@@ -33,7 +35,7 @@
 
 .wrapper {
    width: 100%;
-   min-height: 757px;
+   min-height: 1000px;
    background-color: #ECF7F3;
    overflow: hidden;
 }
@@ -205,7 +207,7 @@
    &__inner {
       max-width: 1173px;
       width: 100%;
-      min-height: 557px;
+      min-height: 800px;
       padding: 0 30px;
       margin: 0 auto;
       display: flex;
@@ -235,8 +237,16 @@
       color: #2d2d2d;
       margin-bottom: 22px;
 
+      @include mq(xxl) {
+         font-size: 42px;
+      }
+
       @include mq(xl) {
          text-align: center;
+      }
+
+      @include mq(md) {
+         font-size: 38px;
       }
    }
 
@@ -250,6 +260,10 @@
 
       @include mq(xl) {
          text-align: center;
+      }
+
+      @include mq(md) {
+         font-size: 14px;
       }
    }
 
@@ -366,6 +380,7 @@
    &__items-right {
       position: relative;
       max-width: 450px;
+      height: 550px;
       width: 100%;
       display: flex;
       justify-content: center;
@@ -379,6 +394,11 @@
       @include mq(md) {
          width: 600px;
          top: 70px;
+      }
+
+      @include mq(sm) {
+         top: 50px;
+         width: 400px;
       }
    }
 
@@ -398,11 +418,24 @@
       animation-duration: 10s;
       animation-timing-function: linear;
 
-      @include mq(md) {
-         max-width: 380px;
-         width: 100%;
-         height: 400px;
+      @include mq(xxl) {
+         width: 410px;
       }
+
+      @include mq(xxl) {
+         width: 450px;
+      }
+
+      @include mq(md) {
+         width: 320px;
+         height: 320px;
+      }
+
+      @include mq(sm) {
+         width: 250px;
+         height: 230px;
+      }
+
 
    }
 
@@ -416,19 +449,23 @@
       z-index: 1;
 
       @include mq(md) {
-         width: 200px;
-         height: 200px;
+         width: 150px;
+         height: 150px;
       }
+
+      @include mq(sm) {
+         top: 80px;
+         width: 120px;
+         height: 120px;
+      }
+
    }
 
-   &__flag {
-      // position: absolute;
-      // top: 30%;
-      // left: 30%;
-      // z-index: 5;
-   }
+
+   &__flag {}
 
 }
+
 
 .flag-india-small-left {
    position: absolute;
@@ -499,6 +536,8 @@
    animation-fill-mode: forwards;
 }
 
+
+
 @keyframes india-small-left {
    0% {
       left: 30%;
@@ -513,7 +552,6 @@
 @keyframes britain {
    0% {
       left: 30%;
-      transform: rotate(0deg);
    }
 
    100% {
@@ -522,6 +560,21 @@
       top: 5%;
    }
 }
+
+@include mq (md) {
+   @keyframes britain {
+      0% {
+         right: 30%;
+      }
+
+      100% {
+         left: -40px;
+         top: 5%;
+      }
+
+   }
+}
+
 
 @keyframes italy-top {
    0% {
@@ -540,8 +593,24 @@
    }
 
    100% {
+
       right: -28px;
       top: 8%;
+   }
+
+}
+
+@include mq (md) {
+   @keyframes india-big {
+      0% {
+         right: 30%;
+      }
+
+      100% {
+         right: -40px;
+         top: 8%;
+      }
+
    }
 }
 
